# This-is-me

./: .gitignore  .mailmap  README.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  test.html
app/: globals.css  layout.tsx  page.tsx
app/api/contact/: route.ts
backend/: .gitignore  Cargo.toml  Dockerfile
backend/DB/: backup.sql
backend/DB/tables/: schema.sql
backend/Docker/: Dockerfile
backend/src/: db.rs  main.rs  models.rs  routes.rs
components/: AnimatedEyes.tsx  Tick-tock.ts  Tick-tock.tsx  Work.tsx  about.tsx  ascii-eyes.tsx  blog.tsx  contact.tsx  crt-front-screen.tsx  glitch-overlay.tsx  glitch-text.tsx  hero.tsx  jumpscare.tsx  navbar.tsx  projects.tsx  schizo-text.tsx  skills.tsx  tv-frame.tsx
frontend/: Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Tick-tock.tsx  about.tsx  blog.tsx  contact.tsx  crt-front-screen.tsx  glitch-image.tsx  hero.tsx  mobile-notice.tsx
frontend/public/: crt-tv-effect.js
frontend/styles/: globals.css
pages/api/: blog-files.ts
pipeline/: azure-backend-pipeline.yml  azure-frontend-pipeline.yml  azure-pipelines.yml
public/Blog notes/: Day.md  Pretraining_LLM's_with_NVFP4.md  im-actually-insane-and-hateful.md  midnight-code-sessions.md  note1.md  note2.md  note3.md  note4.md
styles/: globals.css
this-is-me/: Chart.yaml  nginx.conf  values.yaml
this-is-me/templates/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  nginx-deployment.yaml
(+2 files in other folders)
