[package]
name = "HeckerProject"
version = "0.1.0"
edition = "2021"

[dependencies]
# Rocket web framework
rocket = { version = "0.5.1", features = ["json"] }

# Database - added "time" feature for timestamp support
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "time"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CORS for frontend communication
rocket_cors = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Time handling
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# Environment variables
dotenv = "0.15"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }